Added solution to day2 part2

--- a/day2/main.ipynb
+++ b/day2/main.ipynb
@@ -49,12 +49,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "passwords = []\n",
+    "input_passwords = []\n",
     "\n",
     "with open(\"input\", \"r\") as file:\n",
     "    for line in file.readlines():\n",
     "        match = string_pattern.match(line)\n",
-    "        passwords.append(match.groups())"
+    "        input_passwords.append(match.groups())"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "passwords = map(lambda v: (int(v[0]), int(v[1]), v[2], v[3]), passwords)"
+    "passwords = map(lambda v: (int(v[0]), int(v[1]), v[2], v[3]), input_passwords)"
    ]
   },
   {
@@ -87,6 +87,77 @@
    "outputs": [],
    "source": [
     "passwords = filter(lambda v: v[0] <= v[3].count(v[2]) <= v[1], passwords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converts generator into list to allow counting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passwords = list(passwords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Counts the valid passwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(passwords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Re-parses as int the first and second element of the tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passwords = map(lambda v: (int(v[0]), int(v[1]), v[2], v[3]), input_passwords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use **filter** with an **XOR** operation to remove all the invalid password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passwords = filter(lambda v: (v[3][v[0]-1] == v[2]) ^ (v[3][v[1]-1] == v[2]), passwords)"
    ]
   },
   {
