Added solution for day4 part2

--- a/day4/main.ipynb
+++ b/day4/main.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepares variables to count the number of valid passports and read chunk"
+    "Prepares counter to count the number of valid passports"
    ]
   },
   {
@@ -27,8 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 0\n",
-    "r = \"\""
+    "n = 0"
    ]
   },
   {
@@ -84,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reset():\n",
+    "def reset_checklist():\n",
     "    global labels\n",
     "    labels = {l: False for l in labels}"
    ]
@@ -93,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Defines a function to drop characters until space or newline"
+    "Defines a function to drop characters until the label' end"
    ]
   },
   {
@@ -102,8 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_until():\n",
-    "    while (r := f.read(1)) not in (\" \",\"\\n\"):\n",
+    "def ignore_until_ends_label():\n",
+    "    while f.read(1) not in (\" \",\"\\n\"):\n",
     "        pass"
    ]
   },
@@ -125,18 +124,23 @@
     "r = f.read(3)\n",
     "\n",
     "while r != \"\":\n",
+    "    # if a new line is found considers the passport data ended and evaluates the validity of it\n",
     "    if r[0] == \"\\n\":\n",
     "        if all(v for v in labels.values()):\n",
     "            n += 1\n",
     "            \n",
-    "        reset()\n",
+    "        # resets the checklist \n",
+    "        reset_checklist()\n",
     "        \n",
+    "        # reads another character to complete the chunk of 3 bytes\n",
     "        r = r[1:] + f.read(1)\n",
     "    else:\n",
+    "        # checks the label as checked if it is required\n",
     "        if r in labels:\n",
     "            labels[r] = True\n",
     "        \n",
-    "        read_until()\n",
+    "        # ignores characters until label ends\n",
+    "        ignore_until_ends_label()\n",
     "        \n",
     "        r = f.read(3)"
    ]
@@ -146,6 +150,165 @@
    "metadata": {},
    "source": [
     "Returns the number of valid passport"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creates counter to count valid passports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "n = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reopens the input file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"input\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defines the function to read the value of the labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_value() -> str:\n",
+    "    s = []\n",
+    "    \n",
+    "    while (c := f.read(1)) not in (\" \",\"\\n\"):\n",
+    "        s += c\n",
+    "    \n",
+    "    return \"\".join(s[1:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creates the rules' set for the labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "rules = {\n",
+    "    # checks if the value is a number and if it falls inside the valid range\n",
+    "    \"byr\": lambda x: x.isdigit() and 1920 <= int(x) <= 2002,\n",
+    "    \"iyr\": lambda x: x.isdigit() and 2010 <= int(x) <= 2020,\n",
+    "    \"eyr\": lambda x: x.isdigit() and 2020 <= int(x) <= 2030,\n",
+    "    \n",
+    "    # checks the unit of measurement and the consequent range\n",
+    "    \"hgt\": lambda x: (x.endswith(\"cm\") and 150 <= int(x[:-2]) <= 193) or\n",
+    "                    (x.endswith(\"in\") and 59 <= int(x[:-2]) <= 76),\n",
+    "    \n",
+    "    # checks if the string begin with \"#\" and if the characters are all hex values\n",
+    "    \"hcl\": lambda x: x.startswith(\"#\") and\n",
+    "                    all(c in string.hexdigits for c in x[1:]),\n",
+    "    \n",
+    "    # checks if the value is a valid category\n",
+    "    \"ecl\": lambda x: x in (\"amb\", \"blu\", \"brn\", \"gry\", \"grn\", \"hzl\", \"oth\"),\n",
+    "    \n",
+    "    # checks value length and that is composed by digits\n",
+    "    \"pid\": lambda x: len(x) == 9 and x.isdigit()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reads the file with chunk of 3 bytes until the end  \n",
+    "When a label is found the value is tested with the right rules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "r = f.read(3)\n",
+    "\n",
+    "while r != \"\":\n",
+    "    # if a new line is found considers the passport data ended and evaluates the validity of it\n",
+    "    if r[0] == \"\\n\":\n",
+    "        if all(v for v in labels.values()):\n",
+    "            n += 1\n",
+    "\n",
+    "        # resets the checklist \n",
+    "        reset_checklist()\n",
+    "        \n",
+    "        # reads another character to complete the chunk of 3 bytes\n",
+    "        r = r[1:] + f.read(1)\n",
+    "\n",
+    "    else:\n",
+    "        # reads the value of the labels\n",
+    "        v = read_value()\n",
+    "        \n",
+    "        # if the label is one of the expected ones checks the validity of it with the right rules\n",
+    "        if r in labels:\n",
+    "            if rules[r](v):\n",
+    "                labels[r] = True\n",
+    "        \n",
+    "        r = f.read(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Returns the number of valid passports"
    ]
   },
   {
