Added solution for day5 part2

--- a/day5/main.ipynb
+++ b/day5/main.ipynb
@@ -61,12 +61,15 @@
    "source": [
     "for c in file:\n",
     "    for i in range(10):\n",
+    "        # if current characters are the same continue the comparison\n",
     "        if c[i] == g[i]:\n",
     "            continue\n",
     "        \n",
+    "        # if the current seat ID is greter than the old one, replaces it\n",
     "        if c[i] == \"B\" or c[i] == \"R\":\n",
     "            g = c[:-1]\n",
     "        \n",
+    "        # if the greater between current ID and the old one was found skips to the next seat ID\n",
     "        break"
    ]
   },
@@ -74,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Decode the greater seat ID as if it were a binary code with **B** or **R** as instead of **1**"
+    "Defines a function to decode seat ID as if it were a binary code with **B** or **R** instead of **1**"
    ]
   },
   {
@@ -85,10 +88,14 @@
    },
    "outputs": [],
    "source": [
-    "v = 0\n",
-    "for i in range(10):\n",
-    "    if g[i] == \"B\" or g[i] == \"R\":\n",
-    "        v += 2**(10-i-1)"
+    "def decode(s: str) -> int:\n",
+    "    v = 0\n",
+    "    \n",
+    "    for i in range(len(s)):\n",
+    "        if s[i] == \"B\" or s[i] == \"R\":\n",
+    "            v += 2**(len(s)-i-1)\n",
+    "\n",
+    "    return v"
    ]
   },
   {
@@ -104,7 +111,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v"
+    "decode(g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defines variable to represent the highest seat ID, the lowest seat ID and the sum of the seat IDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = 0\n",
+    "l = 2**10\n",
+    "s = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reopens the input file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"input\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finds the highest seat ID, the lowest seat ID and the sum of all the seat IDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c in file:\n",
+    "    # decodes the current seat ID removing the new line character\n",
+    "    c = decode(c[:-1])\n",
+    "    \n",
+    "    # if the current ID is lower than the old one replaces it\n",
+    "    if c < l:\n",
+    "        l = c\n",
+    "    \n",
+    "    # if the current ID is higher than the old one replaces it\n",
+    "    if c > h:\n",
+    "        h = c\n",
+    "    \n",
+    "    # sum all the occupied seat ID\n",
+    "    s += c "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The missing seat ID can be found as the sum of all the seat IDs available on the plane minus the sum of all the seat IDs occupied"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(h*(h + 1) - (l - 1)*l) // 2 - s"
    ]
   }
  ],
