Added solution for day6 part2

--- a/day6/main.ipynb
+++ b/day6/main.ipynb
@@ -118,6 +118,104 @@
    "source": [
     "n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Resets counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reopens input file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"input\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now each user have an own checklist, all the group's checklists are merged with an **and** policy to detect the shared answers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# uses nl to detect two sequential new line\n",
+    "nl = False\n",
+    "# v is now checklist for group with \"and\" policy\n",
+    "v = 2**27 - 1\n",
+    "# u is the checklist for the single user\n",
+    "u = 0\n",
+    "\n",
+    "while (c := f.read(1)) != \"\":\n",
+    "    if c != \"\\n\":\n",
+    "        nl = False\n",
+    "    \n",
+    "    # ends of a group\n",
+    "    if nl and c == \"\\n\":\n",
+    "        n += count(v)\n",
+    "        v = 2**27 - 1\n",
+    "\n",
+    "    # ends of a user list\n",
+    "    elif c == \"\\n\":\n",
+    "        v &= u\n",
+    "        u = 0\n",
+    "        nl = True\n",
+    "\n",
+    "    else:\n",
+    "        # adds the answer to the checklist exploiting the or bitwise\n",
+    "        u |= 1 << ord(c) - 97\n",
+    "\n",
+    "# count also the last group checklist\n",
+    "n += count(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Returns the new result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n"
+   ]
   }
  ],
  "metadata": {
