Added solution for day7 part2

--- a/day7/main.ipynb
+++ b/day7/main.ipynb
@@ -96,7 +96,7 @@
     "            if container not in containers:\n",
     "                containers.add(container)\n",
     "                containers.update(get_containers(container, containers))\n",
-    "        \n",
+    "\n",
     "    return containers"
    ]
   },
@@ -114,6 +114,92 @@
    "outputs": [],
    "source": [
     "len(get_containers(\"shiny gold\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creates a new graph with the following structure *{bag: [(bag number it can contains, bag color it can contains)]}*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generates the graph of bags and what they can contain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"input\", \"r\") as file:\n",
+    "    for line in file:\n",
+    "        if len(contents := re_content.findall(line)) > 0:\n",
+    "            container = re_container.match(line)[1]\n",
+    "\n",
+    "            if content not in graph:\n",
+    "                graph[container] = []\n",
+    "\n",
+    "            graph[container] = [(int(n), c) for n, c in contents]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defines a recursive function to get the content of a bag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "\n",
+    "def get_content_bags(color: str):\n",
+    "    if color not in graph:\n",
+    "        return 0\n",
+    "\n",
+    "    return reduce(lambda v, e: v + e[0] * (1 + get_content_bags(e[1])), graph[color], 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Returns the numbers of the bag contained in a **shiny gold** bag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_content_bags(\"shiny gold\")"
    ]
   }
  ],
