Added solution for day8 part2

--- a/day8/main.ipynb
+++ b/day8/main.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Defines a function to read a line of the input file"
+    "Defines a function to read a specific command from the input file"
    ]
   },
   {
@@ -61,10 +61,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_next():\n",
+    "def get_instruction(i):\n",
+    "    if len(instructions) > i:\n",
+    "        cmd, arg, vis = instructions[i]\n",
+    "            \n",
+    "        instructions[i] = (cmd, arg, True)\n",
+    "        \n",
+    "        return cmd, arg, vis\n",
+    "    \n",
+    "    for _ in range(i - len(instructions)):\n",
+    "        cmd, arg = next(f).split()\n",
+    "        arg = int(arg)\n",
+    "        instructions.append((cmd, arg, False))\n",
+    "\n",
     "    cmd, arg = next(f).split()\n",
-    "    arg = int(arg)\n",
-    "    return cmd, arg"
+    "    arg = int(arg)        \n",
+    "    instructions.append((cmd, arg, True))\n",
+    "    \n",
+    "    return cmd, arg, False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defines a function to execute the command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do(i, value, cmd, arg):\n",
+    "    if cmd == \"acc\":\n",
+    "        value += arg\n",
+    "        i += 1\n",
+    "    elif cmd == \"nop\":\n",
+    "        i += 1\n",
+    "    elif cmd == \"jmp\":\n",
+    "        i += arg\n",
+    "    \n",
+    "    return i, value"
    ]
   },
   {
@@ -81,30 +120,14 @@
    "outputs": [],
    "source": [
     "while True:\n",
-    "    if len(instructions) > i:\n",
-    "        cmd, arg, vis = instructions[i]\n",
+    "    cmd, arg, vis = get_instruction(i)\n",
     "        \n",
-    "        if vis is True:\n",
-    "            break\n",
-    "            \n",
-    "        instructions[i] = (cmd, arg, True)\n",
-    "    else:\n",
-    "        for _ in range(i - len(instructions)):\n",
-    "            instructions.append((*read_next(), False))\n",
-    "        \n",
-    "        cmd, arg = read_next()\n",
-    "        \n",
-    "        instructions.append((cmd, arg, True))\n",
-    "        \n",
+    "    if vis is True:\n",
+    "        break\n",
+    "    \n",
     "    print(\"{}>\\t{}\\t{}\".format(i, cmd, arg))\n",
     "    \n",
-    "    if cmd == \"acc\":\n",
-    "        value += arg\n",
-    "        i += 1\n",
-    "    elif cmd == \"nop\":\n",
-    "        i += 1\n",
-    "    elif cmd == \"jmp\":\n",
-    "        i += arg"
+    "    i, value = do(i, value, cmd, arg)"
    ]
   },
   {
@@ -120,6 +143,96 @@
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Resets pointer and value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "value = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Resets the visited list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instructions = list(map(lambda e: (e[0], e[1], False), instructions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the program, if it finds a **nop** or **jmp** changes it and test the new way "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "changed_id = None\n",
+    "last_value = 0\n",
+    "while i != 604:\n",
+    "    cmd, arg, vis = get_instruction(i)\n",
+    "    \n",
+    "    if changed_id is None and cmd in [\"nop\", \"jmp\"]:\n",
+    "        changed_id = i\n",
+    "        last_value = value\n",
+    "        cmd = \"jmp\" if cmd == \"nop\" else \"nop\"\n",
+    "        \n",
+    "    elif vis and changed_id is not None:\n",
+    "        i = changed_id\n",
+    "        changed_id = None\n",
+    "        value = last_value\n",
+    "        cmd, arg, _ = get_instruction(i)\n",
+    "        \n",
+    "    print(\"{}>\\t{}\\t{}\\t{}\".format(i, cmd, arg, changed_id))\n",
+    "        \n",
+    "    i, value = do(i, value, cmd, arg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Shows the new value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "value"
